[package]
name = "pantheon"
version = "0.1.0"
edition = "2021"
license = "MIT"

[package.metadata.lambda.env]
RUST_LOG = "debug"
DYNAMODB_URI = "dynamodb"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
lambda_http = "0.10.0"
tokio = { version = "1", features = ["macros"] }
serde_json = "1.0"
serde = "1.0.197"
testcontainers = "0.15.0"

[[bin]]
name = "get-all-contents"
path = "src/bin/get-all-contents.rs"

[[bin]]
name = "local"
path = "src/local.rs"
